external-projects/sui-prover/crates/sui-prover/tests/snapshots/dynamic_field/borrow_mut.fail.0.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/dynamic_field/borrow_mut.fail.0.move:19:5
   │
19 │     ensures(!dynamic_field::exists_with_type<u64, u8>(&x.id, 10));
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/dynamic_field/borrow_mut.fail.0.move:16: foo_spec
